@@ -20,6 +20,8 @@
 #ifndef ZABBIX_NODEWATCHER_HISTORY_H
 #define ZABBIX_NODEWATCHER_HISTORY_H
 
+extern  int     CONFIG_NODE_NOHISTORY;
+
 void main_historysender();
 
 #endif
